# copilot-sdk-acp

.github/: lsp.json
.github/workflows/: codegen-check.yml  dotnet-sdk-tests.yml  go-sdk-tests.yml  issue-triage.lock.yml  nodejs-sdk-tests.yml  publish.yml  python-sdk-tests.yml  sdk-consistency-review.lock.yml  sdk-e2e-tests.yml  upstream-sync.yml
docs/auth/: byok.md
docs/guides/: session-persistence.md
docs/guides/setup/: backend-services.md  bundled-cli.md  byok.md  github-oauth.md  index.md  local-cli.md  scaling.md
dotnet/: .gitignore  README.md
dotnet/src/: Client.cs  GitHub.Copilot.SDK.csproj  Session.cs  Types.cs
dotnet/test/: ClientTests.cs  RpcTests.cs  SessionTests.cs
dotnet/test/Harness/: E2ETestContext.cs  TestHelper.cs
go/: README.md  client.go  client_test.go  generated_session_events.go  go.mod  go.sum  session.go  session_test.go  types.go
go/cmd/bundler/: main.go
go/e2e/: session_test.go
go/e2e/testharness/: helper.go
go/embeddedcli/: installer.go
go/internal/e2e/: rpc_test.go  session_test.go
go/internal/embeddedcli/: embeddedcli.go  embeddedcli_test.go
go/internal/flock/: flock.go  flock_other.go  flock_test.go  flock_unix.go  flock_windows.go
go/internal/jsonrpc2/: jsonrpc2.go
go/rpc/: generated_rpc.go
nodejs/: README.md  package-lock.json  package.json
nodejs/scripts/: generate-session-types.ts
nodejs/src/: client.ts  index.ts  session.ts  types.ts
nodejs/src/protocols/: index.ts  protocol-adapter.ts
nodejs/test/: client.test.ts
python/: .gitignore  README.md  pyproject.toml  test_client.py
python/copilot/: __init__.py  client.py  session.py  types.py
python/e2e/: test_rpc.py  test_session.py
python/e2e/testharness/: __init__.py  context.py  helper.py
python/scripts/: build-wheels.mjs
scripts/codegen/: csharp.ts  go.ts  package-lock.json  package.json  python.ts  typescript.ts  utils.ts
test/harness/: package-lock.json  package.json  replayingCapiProxy.ts
(+15 files in other folders)
